# sovereign

./: Cargo.toml  README.md
adapters/celestia/: README.md
adapters/risc0/: Cargo.toml
adapters/solana/: README.md
adapters/sp1/: Cargo.toml
adapters/sp1/src/: guest.rs  host.rs  lib.rs  metrics.rs
examples/demo-rollup/: README.md
examples/demo-rollup/stf/: README.md
full-node/db/sov-db/src/: state_db.rs
full-node/sov-ethereum/src/gas_price/: gas_oracle.rs
full-node/sov-stf-runner/src/: runner.rs
module-system/module-implementations/sov-bank/src/: token.rs
module-system/module-implementations/sov-nft-module/: Cargo.toml
module-system/sov-modules-core/src/runtime/: capabilities.rs
module-system/sov-modules-macros/src/: cli_parser.rs
rollup-interface/: README.md
