[package]
name = "sov-sp1-adapter"
authors = { workspace = true }
description = "An adapter allowing Risc0 to be used with the Sovereign SDK"
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
sp1-sdk = { workspace = true }
serde = { workspace = true }
bytemuck = "1.13.1"
once_cell = { version = "1.19.0", optional = true }
parking_lot = { version = "0.12.1", optional = true }
sov-zk-cycle-utils = { path = "../../utils/zk-cycle-utils", version = "0.3" }
sov-rollup-interface = { path = "../../rollup-interface", version = "0.3" }

[features]
default = []
bench = ["once_cell", "parking_lot", "sov-zk-cycle-utils/native"]

[[test]]
name = "native"
required-features = []
